# Explicit-GPUMPM-Ductile-Fracture

./: .gitignore  CMakeLists.txt  README.md
GPUMPM-HKM-PHASE-Field/: GPUMPM-HKM.sln
GPUMPM-HKM-PHASE-Field/GPUMPM-HKM/: CMakeLists.txt  ExplicitTimeIntegrator.cu  G2PKernal.cu  G2PKernal.cuh  GPUMPM-HKM.vcxproj  GPUMPM-HKM.vcxproj.filters  LoadSample.h  Main.cpp  Materials.cpp  Materials.h  Models.cpp  Models.h  P2GKernal.cu  P2GKernal.cuh  Particle_kernal.cu  Particles.cpp  Particles.cuh  SPGrid.h  Setting.h  Simulator.cpp  Simulator.h  TimeIntegrator.cu  TimeIntegrator.cuh  frameRate.txt  gl_main.cpp  gl_texture.h  glmainHead.h  lodepng.cpp  lodepng.h  phase_x.txt  svd3.cuh  zsSVD.cu  zsSVD.cuh
GPUMPM-HKM-PHASE-Field/GPUMPM-HKM/partio/lib/: partio.lib
GPU_MPM/: ExplicitTimeIntegrator.cu  G2PKernal.cu  LoadSample.cpp  Materials.cpp  Models.h  P2GKernal.cu  Particle_kernal.cu  Particles.cpp  QRSVD.hpp  SPGrid.cpp  SPGrid.h  SPGridMask.cpp  SPGridMask.h  Setting.h  Simulator.cpp  TimeIntegrator.cu  Transformer.cpp  Transformer.cuh  Transformer_kernal.cu  cuda_kernal_tools.cu  cuda_kernal_tools.cuh  cuda_tools.h  gl_main.cpp  gl_texture.h  glmainHead.h
